añadido efecto imagen

--- a/index.html
+++ b/index.html
@@ -148,7 +148,38 @@
         </div>
     </div>
     </div>
-   
+    <div class="box Works">
+        <div class="Works-info">
+        <h2 class="Works-h2"><span class="Works-h2-span">Our Works</span> </h2>
+        <span class="Works-span">Digital Art Meets Strategy</span>
+        <p class="Works-p">At Madbox, we don’t just create ads—we craft digital experiences that captivate, inspire, and drive results. From bold visuals to strategic storytelling, every project is designed to leave a lasting impact. Explore our work and see creativity in action.</p>
+       </div>
+    </div>
+    <div class="box WorkItem">
+        <div class="WorkWrapper">
+            <img src="assets/beautiful-vertical-closeup-shot-glass-ball-with-reflection-breathtaking-sunset (1).jpg" alt="">
+        </div>
+
+    </div>
+    <div class="box WorkItem">
+        <div class="WorkWrapper">
+            <img src="assets/abstract-face-woman-water-waves (1).jpg" alt="">
+        </div>
+
+    </div>
+    <div class="box WorkItem">
+        <div class="WorkWrapper">
+           <img src="assets/colorful-exotic-leaf-close-up (1).jpg" alt="">
+        </div>
+
+    </div>
+    <div class="box FinalWorkItem">
+        <div class="FinalWorkWrapper">
+           <img src="assets/colorful-exotic-leaf-close-up (1).jpg" alt="">
+        </div>
+
+    </div>
+
     </div>
     </div>
 </body>
