--- a/index.html
+++ b/index.html
@@ -175,8 +175,24 @@
     </div>
     <div class="box FinalWorkItem">
         <div class="FinalWorkWrapper">
-           <img src="assets/colorful-exotic-leaf-close-up (1).jpg" alt="">
+           <img src="assets/top-view-white-black-paint-pink-background (1).jpg" alt="">
         </div>
+        <div class="Efecto">
+            <div class="Efecto-marginWrapper Efecto-margin--left">
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--primero IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--segundo IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--tercero IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--cuarto IsInActive"></div>
+            </div>
+            <div class="Efecto-marginWrapper Efecto-margin--right">
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--primero IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--segundo IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--tercero IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--cuarto IsInActive"></div>
+            </div>
+        </div>
+    </div>
+    <div class="box Team">
 
     </div>
 
