--- a/index.html
+++ b/index.html
@@ -97,6 +97,20 @@
         <div class="img-wrapper img-wrapper--bottom">
             <img src="assets/high-rise-building-nighttime (1).jpg" alt="">
         </div>
+        <div class="Efecto">
+            <div class="Efecto-marginWrapper Efecto-margin--left">
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--primero IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--segundo IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--tercero IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--cuarto IsInActive"></div>
+            </div>
+            <div class="Efecto-marginWrapper Efecto-margin--right">
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--primero IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--segundo IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--tercero IsInActive"></div>
+                <div class="Efecto-margin Efecto-margin--black Efecto-margin--cuarto IsInActive"></div>
+            </div>
+        </div>
     </div>
     <div class="box AboutUs">
         <h2 class="AboutUs-h2">
@@ -193,7 +207,33 @@
         </div>
     </div>
     <div class="box Team">
-
+        <div class="Team-info">
+            <h2 class="Team-h2"><span class="Team-h2-span">Our Team</span> </h2>
+        <span class="Team-span">A Team driven by Passion</span>
+        <p class="Team-p">We’re more than a team—we’re a force of creative minds, digital wizards, and strategic thinkers obsessed with bringing brands to life.</p> 
+        </div>
+        <ul class="Team-ul TeamGallery">
+            <li class="TeamGallery-li">
+                <div class="TeamGallery-imgWrapper">Imagen1</div>
+                <h3 class="TeamGallery-h3">Victor</h3>
+                <span class="TeamGallery-span">Creative Director</span>
+            </li>
+            <li class="TeamGallery-li">
+                <div class="TeamGallery-imgWrapper">Imagen2</div>
+                <h3 class="TeamGallery-h3">Carmen</h3>
+                <span class="TeamGallery-span">Digital Marketing Strategist</span>
+            </li>
+            <li class="TeamGallery-li">
+                <div class="TeamGallery-imgWrapper">Imagen3</div>
+                <h3 class="TeamGallery-h3">Maria</h3>
+                <span class="TeamGallery-span">Social Media Manager</span>
+            </li>
+            <li class="TeamGallery-li">
+                <div class="TeamGallery-imgWrapper">Imagen4</div>
+                <h3 class="TeamGallery-h3">Luis</h3>
+                <span class="TeamGallery-span">Performance Marketing Specialist</span>
+            </li>
+        </ul>
     </div>
 
     </div>
