--- a/index.html
+++ b/index.html
@@ -214,22 +214,22 @@
         </div>
         <ul class="Team-ul TeamGallery">
             <li class="TeamGallery-li">
-                <div class="TeamGallery-imgWrapper">Imagen1</div>
+                <div class="TeamGallery-imgWrapper"><img src="assets/ChatGPT Image 6 jun 2025, 19_52_15.png" alt=""></div>
                 <h3 class="TeamGallery-h3">Victor</h3>
                 <span class="TeamGallery-span">Creative Director</span>
             </li>
             <li class="TeamGallery-li">
-                <div class="TeamGallery-imgWrapper">Imagen2</div>
+                <div class="TeamGallery-imgWrapper"><img src="assets/6 jun 2025, 19_54_47.png" alt=""></div>
                 <h3 class="TeamGallery-h3">Carmen</h3>
                 <span class="TeamGallery-span">Digital Marketing Strategist</span>
             </li>
             <li class="TeamGallery-li">
-                <div class="TeamGallery-imgWrapper">Imagen3</div>
+                <div class="TeamGallery-imgWrapper"><img src="assets/6 jun 2025, 19_54_47.png" alt=""></div>
                 <h3 class="TeamGallery-h3">Maria</h3>
                 <span class="TeamGallery-span">Social Media Manager</span>
             </li>
             <li class="TeamGallery-li">
-                <div class="TeamGallery-imgWrapper">Imagen4</div>
+                <div class="TeamGallery-imgWrapper"> <img src="assets/ChatGPT Image 6 jun 2025, 19_52_15.png" alt=""></div>
                 <h3 class="TeamGallery-h3">Luis</h3>
                 <span class="TeamGallery-span">Performance Marketing Specialist</span>
             </li>
